// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages defineCapPricingPerDistance should render correctly 1`] = `
<FullColumnLayout
  description="Cap Pricing Per Distance entry page of the Create Fares Data Service"
  errors={Array []}
  title="Cap Pricing Per Distance - Create Fares Data Service"
>
  <CsrfForm
    action="/api/capPricingPerDistance"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
      id="cap-pricing-per-distance-heading"
    >
      Enter your distance cap details
    </h1>
    <div
      className="govuk-grid-row"
    >
      <DistanceRow
        capPricingPerDistanceData={
          Object {
            "distanceFrom0": "0",
            "distanceTo0": "Max",
          }
        }
        errors={Array []}
        numberOfProductsToDisplay={1}
        setCapPricingPerDistanceData={[Function]}
      />
      <div
        className="flex-container"
      >
        <button
          className="govuk-button govuk-button--secondary govuk-!-margin-left-3 govuk-!-margin-bottom-3 time-restrictions-button-placement"
          id="add-another-button"
          onClick={[Function]}
          type="button"
        >
          Add another product
        </button>
      </div>
      <input
        className="govuk-button govuk-!-margin-left-3"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </div>
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages defineCapPricingPerDistance should render error messaging when errors are passed 1`] = `
<FullColumnLayout
  description="Cap Pricing Per Distance entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Distance to must be defined and a number",
        "id": "distance-to-0",
      },
    ]
  }
  title="Cap Pricing Per Distance - Create Fares Data Service"
>
  <CsrfForm
    action="/api/capPricingPerDistance"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Distance to must be defined and a number",
            "id": "distance-to-0",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
      id="cap-pricing-per-distance-heading"
    >
      Enter your distance cap details
    </h1>
    <div
      className="govuk-grid-row"
    >
      <DistanceRow
        capPricingPerDistanceData={
          Object {
            "distanceFrom0": "0",
            "distanceFrom1": "3",
            "distanceTo0": "",
            "distanceTo1": "Max",
            "maximumPrice0": "4",
            "minimumPrice0": "3",
            "pricePerKm1": "5",
          }
        }
        errors={
          Array [
            Object {
              "errorMessage": "Distance to must be defined and a number",
              "id": "distance-to-0",
            },
          ]
        }
        numberOfProductsToDisplay={2}
        setCapPricingPerDistanceData={[Function]}
      />
      <div
        className="flex-container"
      >
        <button
          className="govuk-button govuk-button--secondary govuk-!-margin-left-3 govuk-!-margin-bottom-3 time-restrictions-button-placement"
          id="add-another-button"
          onClick={[Function]}
          type="button"
        >
          Add another product
        </button>
        <button
          className="govuk-button govuk-button--secondary govuk-!-margin-left-3 govuk-!-margin-bottom-3"
          id="remove-button"
          onClick={[Function]}
          type="button"
        >
          Remove last product
        </button>
      </div>
      <input
        className="govuk-button govuk-!-margin-left-3"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </div>
  </CsrfForm>
</FullColumnLayout>
`;
